# Crop-Disease-Detection

./: LICENSE  README.md  main.py  pyproject.toml  suggestions.json
notebook/: crop_disease_detection.ipynb
ui/: testCrop.html
